resources/k8s/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open
  spec:
    replicas: 1
    template:
      metadata:
        name: open
        labels:
          app: open
      spec:
        containers:
          - image: jast90/open-service
            name: open
            ports:
              - containerPort: 8888
