resources/k8s/service/service.yaml
# open service
apiVersion: v1
kind: Service
metadata:
  name: open
  labels:
    app: open
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: open
